--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@ iframe {
     width: 95%;
     height: 100vh;
     scrollbar-width: 1px; /* Hide scrollbar for Firefox */
-    border: 2px solid rgb(165, 42, 42); /* Brownish-red border */
+    border-top: 2px solid rgb(165, 42, 42); /* Brownish-red border */
+    border-bottom: 2px solid rgb(165, 42, 42); /* Brownish-red border */
     border-radius: 5px;
 }
 
