--- a/style.css
+++ b/style.css
@@ -123,9 +123,26 @@ p {
 .popup-header {
     width: 100%;
     display: flex;
-    justify-content: flex-end;
-    padding: 10px;
+    justify-content: space-between;
     background:rgb(248, 248, 248)
+}
+
+
+
+.close-btn {
+    font-size: 1.2rem;
+    cursor: pointer;
+    color: #555;
+    padding: 10px;
+}
+
+.fa-bars{
+    cursor: pointer;
+    color: #555;
+    border: 1px solid #555;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 5px 10px;
 }
 
 iframe {
@@ -134,17 +151,6 @@ iframe {
     border: none;
 }
 
-.close-btn {
-    font-size: 1.2rem;
-    padding: 10px;
-    cursor: pointer;
-    color: #555;
-    transition: 0.3s;
-}
-
-.close-btn:hover {
-    color: rgb(165, 42, 42);
-}
 
 /* .fa-angle-up{
     color: rgb(165, 42, 42);
