--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ p {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background:rgb(248, 248, 248)
 }
 
