--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h2 {
     font-size: 2.5rem;
     color: rgb(165, 42, 42);
     margin-bottom: 10px;
-    padding: 20px;
+    padding: 10vh 0;
     text-align: left;
 }
 
@@ -109,12 +109,11 @@ p {
 .popup {
     display: none;
     position: fixed;
-    top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 92vh;
     background-color: rgba(0, 0, 0, 0.8);
-    z-index: 999;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -122,10 +121,13 @@ p {
 
 .popup-header {
     width: 100%;
+    height: 8vh;
+    z-index: 1000;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background:rgb(248, 248, 248)
+    background-color: rgb(252, 252, 252);
 }
 
 
@@ -147,7 +149,7 @@ p {
 
 iframe {
     width: 100vw;
-    height: 100vh;
+    height: 92vh;
     border: none;
 }
 
@@ -190,4 +192,6 @@ iframe {
     .dropdown-content a {
         font-size: 1.2rem;
     }
+
+
 }
