--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ h2 {
     font-size: 2.5rem;
     color: rgb(165, 42, 42);
     margin-bottom: 10px;
-    padding: 10vh 0;
     text-align: left;
+    padding: 10vh 20px 0px 20px;
 }
 
 p {
